hphp/hack/test/full_fidelity/cases/concurrent/error/concurrent_reuse_lval_2.php
<?hh

async function f() {
  concurrent {
    await genx(inout_fun(inout $x));
    await genx($x);
  }
}
